3-tire-end-to-end/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: bera1998/3-tire-end-to-end-backend-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
