3-tire-end-to-end/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: bera1998/frontend-app:IMAGE_TAG
          #image: 183035154159.dkr.ecr.ap-south-1.amazonaws.com/frontend-app:latest
          #image: bera1998/3-tire-end-to-end-frontend (if using Docker Hub)
          imagePullPolicy: Always
          ports:
            - containerPort: 80
